# Trident

./: .gitmodules  CMakeLists.txt  README.md  trident
apsi/: CMakeLists.txt  compute_power.cpp  ecpoint.cpp  ecpoint.h  evl.cpp  item.h  kukutest.cpp  main.cpp  oprf.cpp  oprf.h  oprf_common.h  psi.cpp
apsi/FourQlib/FourQ_64bit_and_portable/: crypto_test  ecc_test  fp_test
apsi/FourQlib/FourQ_64bit_and_portable/AMD64/: consts.s
apsi/cli/common/: common_utils.cpp
apsi/cli/sender/: clp.h  sender_utils.cpp
apsi/cmake/: CompileSchemaCXX.cmake
apsi/common/apsi/: CMakeLists.txt  config.h.in  crypto_context.h  item.cpp  item.h  log.cpp  log.h  poseidon_object.h  powers.cpp  powers.h  psi_params.cpp  psi_params.fbs  psi_params.h  requests.h  responses.h  thread_pool_mgr.cpp  thread_pool_mgr.h  version.cpp  version.h
apsi/common/apsi/network/: CMakeLists.txt  channel.h  ciphertext.fbs  network_channel.h  result_package.cpp  result_package.fbs  result_package.h  sender_operation.cpp  sender_operation.h  sender_operation_response.cpp  sender_operation_response.h  sop.fbs  sop_header.fbs  sop_response.fbs  stream_channel.cpp  stream_channel.h
apsi/common/apsi/network/zmq/: CMakeLists.txt  zmq_channel.cpp  zmq_channel.h
apsi/common/apsi/oprf/: ecpoint.cpp  ecpoint.h  oprf_common.h  oprf_receiver.cpp  oprf_receiver.h  oprf_sender.cpp  oprf_sender.h
apsi/common/apsi/util/: CMakeLists.txt  db_encoding.cpp  db_encoding.h  interpolate.cpp  interpolate.h  label_encryptor.cpp  label_encryptor.h  stopwatch.cpp  stopwatch.h  thread_pool.h  utils.cpp  utils.h
apsi/fourq/: CMakeLists.txt  FourQ.h  FourQ_internal.h  crypto_util.c  eccp2.c  eccp2_core.c  eccp2_no_endo.c  table_lookup.h
apsi/fourq/amd64/: CMakeLists.txt
apsi/parameters/: 100K-1-16.json  100K-1.json  16M-1.json  16M-1024.json  16M-11041.json  16M-2048.json  16M-4096.json  16M-5535.json  1M-1-32.json  1M-1.json  1M-1024-cmp.json  1M-1024-com.json  1M-11041.json  1M-2048-cmp.json  1M-2048-com.json  1M-256-288.json  1M-256.json  1M-4096-32.json  1M-4096-cmp.json  1M-4096-com.json  1M-512-cmp.json  1M-512-com.json  1M-5535.json  256K-1.json  256K-1024.json  256K-2048-cmp.json  256K-2048-com.json  256K-4096-cmp.json  256K-4096-com.json  256K-512.json  256M-1.json  256M-1024.json  256M-2048.json  256M-4096.json
apsi/pipelines/: nix.yml  windows.yml
apsi/receiver/apsi/: CMakeLists.txt  itt.h  match_record.h  plaintext_powers.cpp  plaintext_powers.h  receiver.cpp  receiver.h
apsi/sender/apsi/: CMakeLists.txt  bin_bundle.cpp  bin_bundle.fbs  bin_bundle.h  query.cpp  query.h  sender.cpp  sender.h  sender_db.cpp  sender_db.fbs  sender_db.h
apsi/sender/apsi/util/: CMakeLists.txt  cuckoo_filter.cpp  cuckoo_filter.fbs  cuckoo_filter.h  cuckoo_filter_table.cpp  cuckoo_filter_table.h  hash.h
apsi/sender/apsi/zmq/: CMakeLists.txt  sender_dispatcher.cpp  sender_dispatcher.h
apsi/tests/integration/src/: CMakeLists.txt  integration_tests_runner.cpp  stream_sender_receiver.cpp  test_utils.cpp  test_utils.h
apsi/tests/integration/src/zmq/: CMakeLists.txt  zmq_sender_receiver.cpp
apsi/tests/unit/src/: CMakeLists.txt  unit_tests_runner.cpp
apsi/tests/unit/src/common/: CMakeLists.txt  db_encoding.cpp  interpolate.cpp  item.cpp  oprf.cpp  powers.cpp  psi_params.cpp  result_package.cpp  sender_operation.cpp  sender_operation_response.cpp  stopwatch.cpp  stream_channel.cpp  utils.cpp
apsi/tests/unit/src/common/zmq/: CMakeLists.txt  zmq_channel.cpp
apsi/tests/unit/src/receiver/: CMakeLists.txt
apsi/tests/unit/src/receiver/zmq/: CMakeLists.txt  zmq_receiver.cpp
apsi/tests/unit/src/sender/: CMakeLists.txt  bin_bundle.cpp  sender_db.cpp  utils.cpp
apsi/tools/scripts/: clang-format-all.sh  test_data_creator.py
face_id/: CMakeLists.txt  backend_server.cpp  backend_server.h  base.h  config.h  frontend_server.cpp  frontend_server.h  json_helper.h  main.cpp  monitor_helper.h  test.cpp  test.h
face_id_for_win/: CMakeLists.txt  frontend_server.cpp  frontend_server.h  json_helper.cpp  json_helper.h  main.cpp
heartstudy/: CMakeLists.txt  test_ckks_heartstudy.cpp
libs/monitor/: memory_and_cpu.cpp  memory_and_cpu.h
libs/test_monitor_server/: CMakeLists.txt  server.cpp  test.h
lr_train/: CMakeLists.txt  LR_train.cpp  batch_handler.cpp  batch_handler.h  ckks_lrtrain_opt.cpp  test_ckks_lr_train_0608.cpp  test_ckks_lrtrain.cpp  x_train.txt  y_train.txt
pir/: CMakeLists.txt  pir.cpp
pir_bfv/: CMakeLists.txt  main.cpp  pir.cpp  pir.h  pir_client.cpp  pir_client.h  pir_client_hardware.cpp  pir_client_hardware.h  pir_server.cpp  pir_server.h  pir_server_hardware.cpp  pir_server_hardware.h
pir_bgv/: CMakeLists.txt  main.cpp  pir.cpp  pir.h  pir_client.cpp  pir_client.h  pir_server.cpp  pir_server.h
poseidonresnet20/: CMakeLists.txt
resnet20/: CMakeLists.txt
resnet20/src/cnn/: cnn_poseidon.cpp  cnn_poseidon.h  infer_poseidon.cpp  infer_poseidon.h
resnet20/src/run/: run_cnn.cpp
resnet20/vscode/: settings.json
transformer/: CMakeLists.txt  main.cpp  transformer.cpp
